# CMS_Data_Analyzer

./: .gitignore  BUGS.md  Cargo.toml  GEMINI.md  LICENSE.md  Landscape_Import.md  README.md  crosswalk_Import.md  landing.html  plan_rows.txt  rebuild.sh  results.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: OrgConfigPanel.tsx
frontend/src/components/filters/: AnalysisMonthSelector.tsx  BooleanFilter.tsx  FilterBar.tsx  FilterDropdown.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  NavRail.tsx
frontend/src/context/: FilterContext.tsx  OrgDisplayContext.tsx
frontend/src/pages/: CrosswalkAnalysis.tsx  Dashboard.tsx  DataManagement.tsx  EnrollmentExplorer.tsx  Geography.tsx  GrowthAnalytics.tsx  OrganizationAnalysis.tsx  PlanDetail.tsx
frontend/src/types/: react-simple-maps.d.ts
frontend/src/utils/: formatters.ts
src/: cli.rs  lib.rs  main.rs
src/api/: server.rs
src/cms/: discover.rs  download.rs  mod.rs  parse.rs
src/ingest/: crosswalk.rs  landscape.rs  mod.rs  normalize.rs  resolver.rs
src/model/: county.rs  crosswalk.rs  ingest_row.rs  landscape.rs  manifest.rs  mod.rs  month.rs  plan.rs  series.rs
src/query/: lineage.rs  mod.rs  read_api.rs
src/storage/: binary_cache.rs  maintenance.rs  manifests.rs  mod.rs  parquet_store.rs
src/util/: hashing.rs  io.rs  mod.rs
store/dims/: county_dim.parquet  plan_dim.parquet
store/facts/year=2025/: enrollment_1.parquet  enrollment_2.parquet
store/manifests/: months.json
(+171 files in other folders)
