[package]
name = "ma_store"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# HTML parsing for discovery
scraper = "0.22"

# ZIP handling
zip = "2.2"

# CSV parsing
csv = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Hashing
sha2 = "0.10"

# Encoding
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# Data structures and parallelism
hashbrown = "0.15"
rayon = "1.10"

# Analytical storage
parquet = { version = "53.3", features = ["async"] }
arrow = "53.3"

# Compression
zstd = "0.13"

# Logging
log = "0.4"
env_logger = "0.11"

# Web server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
